Resolves: fdo#86820 executing toolbar menu entry can destroy menu

Change-Id: Ide0ea8f8ff145d487e409b0091918b59f1f83405
(cherry picked from commit eae0dda3e2eddb55b4e2032136541c15ba87fa09)